package it.polimi.ingsw.JSONReader;

public interface JSONFileReader {
}
